testdata/golden/sema/valid/fn_type_basic.fmt
// scenario: basic function types with calls
fn accepts_fn_param(f: fn(int) -> int, x: int) -> int {
    // Call the function-typed parameter
    return f(x);
}

fn double(n: int) -> int {
    return n * 2;
}

fn noop() {}

fn ok_transform(_s: string, _i: int) -> bool {
    return true;
}

fn test_fn_type() {
    // Declaring function type variables
    let callback: fn(int) -> int = double;
    let action: fn() = noop;
    let transform: fn(string, int) -> bool = ok_transform;
}
