testdata/golden/sema/invalid/fn_type_call_type.fmt
// scenario: wrong argument type to function-typed variable
fn test(f: fn(int) -> int) {
    // Error: expected int, got string
    let x: int = f("hello");
}
